# ARC-Emulator

./: CHANGELOG.md  CONTRIBUTING.md  LEGAL.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: ARCHITECTURE.md  ARC_APACHE_INTEGRATION.md  BRANDING.md  DETERMINISTIC_REPLAY.md  GAMECUBE_ROADMAP.md  LAUNCH_POST.md  LEGAL_PRESERVATION.md  N64_ROADMAP.md  PS2_ROADMAP.md  PSP_ROADMAP.md  PUBLIC_POSITIONING.md  ROADMAP.md  SEO_TOPICS.md  VALIDATION_REPORT.md
schemas/: disc_manifest.schema.json  input_timeline.schema.json  replay_plan.schema.json  rom_manifest.schema.json  save_state.schema.json  session_receipt.schema.json
src/arc_emulator/: cli.py
src/arc_emulator/arc/: binary_store.py  crypto.py  receipts.py
src/arc_emulator/core/: bus.py  clock.py  device.py  media_identifier.py  replay.py  save_state.py  session.py
src/arc_emulator/systems/gamecube/: roadmap.py
src/arc_emulator/systems/n64/: header.py  roadmap.py
src/arc_emulator/systems/ps2/: roadmap.py
src/arc_emulator/systems/psp/: roadmap.py
tests/: test_binary_store.py  test_cli.py  test_identifier.py  test_session.py
